<resources>
    <string name="app_name">CurrencyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">Результат</string>
    <string name="sum">Сумма</string>
    <string name="kzt">KZT</string>
    <string name="kgs">KGS</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="current_currency">Текущая валюта %1$s</string>
</resources>